<resources>
    <string name="app_name">Tile-webshop-application</string>
    <string name="email_address">Email cím</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="password_confirm">Jelszó megerősítése</string>
    <string name="profile_data">Profil adatok</string>
    <string name="phone_number">Telefonszám</string>
    <string name="private_customer">Magánszemély</string>
    <string name="company">Cég</string>
    <string name="tax_number">Adószám</string>
    <string name="shipping_data">Szállítási adatok</string>
    <string name="name">Név</string>
    <string name="country">Ország</string>
    <string name="post_number">Irányítószám</string>
    <string name="city">Város</string>
    <string name="address">Utca, házszám</string>
    <string name="billing_data">Számlázási adatok</string>
    <string name="billing_same_as_shipping">Számlázási adatok megegyeznek a szállítási adatokkal</string>
    <string name="terms_of_use">Használati feltételek elfogadása</string>
    <string name="privacy_policy">Hozzájárulás az Adatkezelési tájékoztató-hoz</string>
    <string name="browse">Böngészés vendégként</string>
    <string name="addToCart">Kosárba</string>
    <string name="search">Keresés</string>
    <string name="cart">Kosár</string>
    <string name="settings">Beállítások</string>
    <string name="logout">Kijelentkezés</string>
    <string name="description_label">Leírás:</string>
    <string name="color_label">Szín:</string>
    <string name="size_label">Méret:</string>
    <string name="where_label">Hova:</string>
    <string name="price_label">Ár:</string>
    <string name="currency">csempénz</string>
    <string name="delete_profile">Profil törlése</string>
    <string name="modify_profile">Profil módosítása</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>