<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">
    <LinearLayout
        android:id="@+id/mainSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SettingsActivity"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_profile"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_data"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/emailSettingsET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:minHeight="48dp"
            android:enabled="false"/>

        <EditText
            android:id="@+id/phoneSettingsET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:minHeight="48dp" />

        <RadioGroup
            android:id="@+id/customerTypeSettingsRG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/privateCustomerSettingsRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_customer"
                android:checked="true"
                android:layout_marginEnd="40dp"/>

            <RadioButton
                android:id="@+id/companySettingsRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company"/>

        </RadioGroup>

        <EditText
            android:id="@+id/taxNumSettingsET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:visibility="gone"
            android:hint="@string/tax_number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shipping_data"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/shippingNameSettingsET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/shippingCountrySettingsET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/country"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/shippingPostnumberSettingsET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/post_number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/shippingCitySettingsET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/city"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/shippingAddressSettingsET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/address"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billing_data"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <CheckBox
            android:id="@+id/sameAddressSettingsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billing_same_as_shipping"
            android:checked="true"/>

        <LinearLayout
            android:id="@+id/billingDataSettingsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/billingNameSettingsET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/name"/>

            <EditText
                android:id="@+id/billingCountrySettingsET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/country"/>

            <EditText
                android:id="@+id/billingPostnumberSettingsET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:hint="@string/post_number"/>

            <EditText
                android:id="@+id/billingCitySettingsET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/city"/>

            <EditText
                android:id="@+id/billingAddressSettingsET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/address"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settingsButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            tools:context=".SettingsActivity">

            <Button
                android:id="@+id/modifyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:onClick="performModifications"
                android:text="@string/modify_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/deleteButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:backgroundTint="@color/red"
                android:onClick="deleteProfile"
                android:text="@string/delete_profile"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.801"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
